<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name" translatable="false">Skibydi Toilet Video Call</string>
    <string name="app_lovin_sdk_key" translatable="false">lBnu4FPbTxGUi8cqgwNENfRfqINTVk8B9NxC2Japp2DqKPThsIhPCF7zcC6wr9_IN8OLTcG9SR4dT4OJwQPTBf</string>
<!--    <string name="ads_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>-->
    <string name="ads_app_id" translatable="false">ca-app-pub-4636496778732615~6858214205</string>
    <string name="facebook_app_id" translatable="false">1072400923732000</string>
    <string name="facebook_client_token" translatable="false">a19788edbb2708cebd231633d8c55637</string>
    <string name="adjust_token_key" translatable="false">hwxcxnykuadc</string>

    <string name="ENGLISH" translatable="false">English</string>
    <string name="VIETNAM" translatable="false">Việt Nam</string>
    <string name="JAPANESE" translatable="false">日本</string>
    <string name="KOREAN" translatable="false">"한국인 </string>
    <string name="FRENCH" translatable="false">Français</string>
    <string name="ITALIA" translatable="false">Italia</string>
    <string name="GERMAN" translatable="false">Deutsch</string>
    <string name="INDONESIA" translatable="false">Indonesia</string>
    <string name="BRAZIL" translatable="false">Brazil</string>
    <string name="TURKEY" translatable="false">Türkiye</string>
    <string name="SPAIN" translatable="false">España</string>
    <string name="INDIA" translatable="false">भारत</string>

    <string name="confirm">HOT videos need to see ads to unlock!</string>
    <string name="confirm_close">Are you sure you want to exit the app?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="watch">Watch</string>

    <string name="loading_ads_new">Skybidi Series is running, please wait …</string>
    <string name="lock">LOCK</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="this_action_contains_ads_main">(This action can contain ads)</string>
    <string name="levels">Levels</string>
    <string name="next">Next</string>
    <string name="title_onboard_1">You\'re ready to pick up the phone with a Skibidi Toilet Video Call</string>
    <string name="title_onboard_2">Enjoy with the extensive Skibydi Toilet collection</string>
    <string name="title_onboard_3">Prank and have a fun time with your friends</string>
    <string name="require_internet">Turn on internet connection to use this sound !</string>
    <string name="confirm_internet">Some action are\'nt \navailable OFFLINE.\nPlease check your internet connection</string>
    <string name="custom_ok">Ok</string>
    <string name="retry">Retry</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skibidy_toilet_video" translatable="false">Skibidi Toilet\nVideos</string>
    <string name="other_call">Other call</string>
    <string name="call_john_park">Call John Pork !</string>
    <string name="schedule">Schedule</string>
    <string name="fifteen_second">After 15s</string>
    <string name="thirty_second">After 30s</string>
    <string name="sixty_second">After 60s</string>
    <string name="call_now">Call Now</string>
    <string name="call_skibidy">Call Skibidi</string>
    <string name="intruction_john_pork">Countdown to call John Pork</string>
    <string name="skibidy_toilet" translatable="false">Skibidi Toilet</string>
    <string name="incoming_video">Incoming Video</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="call_ended">Call ended!</string>
    <string name="tap_to_close">Tap to close</string>
    <string name="gallery">GALLERY</string>
    <string name="video">Video %s</string>
    <string name="preview">PREVIEW</string>
    <string name="confirm_delete">Do you wanna delete this video ?</string>
    <string name="delete">Delete</string>
    <string name="empty_history">No item in gallery!</string>
    <string name="language">Language</string>


    <string name="question_1">Hi</string>
    <string name="question_2">Im good, what about you?</string>
    <string name="question_3">Who are you?</string>
    <string name="question_4">Where are you from, Skibidi?</string>
    <string name="question_5">Are you alive?</string>
    <string name="question_6">But i heard you\'ve been dead for a while</string>
    <string name="question_7">Really?Luckily you\'re not dead, I don\'t your Instagram, can you give it to me please?</string>
    <string name="question_8">How old are you?</string>
    <string name="question_9">Why do you keep calling others at 3 AM?</string>
    <string name="question_10">They say they will turn into toilets if they accept your call</string>
    <string name="question_11">What kind of food do you like</string>
    <string name="question_12">What your favorite cartoon?</string>
    <string name="question_13">Tell me a joke</string>
    <string name="question_14">You are so funny, I love you =)</string>
    <string name="question_15">What is your hobby?</string>
    <string name="question_16">Do you know I\'m big fan of you</string>
    <string name="question_17">Is it possible to be friend?</string>
    <string name="question_18">How to fight bad guys?</string>
    <string name="question_19">Do you like this application?</string>
    <string name="question_20">See you again</string>
    <string name="question_21">Thanks you for this conversation</string>

    <string name="answer">Hello my dear?</string>

    <string name="answer_1">Hi my friend, How are you?</string>
    <string name="answer_2">Super good, thank you friend! It\'s great to talk with you today</string>
    <string name="answer_3">Basically, I\'m the coolest toilet in the world</string>
    <string name="answer_4">I\'m from Palermo, Italy. But.. long time I haven\'t been home</string>
    <string name="answer_5">You can guess,haha</string>
    <string name="answer_6">It\'s just a joke bro, I\'m still alive. I\'m traveling all over Europe and I post my trip on Instagram every day. Do you know my Insta</string>
    <string name="answer_7">skibidi.toilet is my Instagram. Follow me and travel all over Europe with me</string>
    <string name="answer_8">It is quite hard to say exactly but i became famous since 2018</string>
    <string name="answer_9">I\'m so sad, nobody answers my call. I just want to talk</string>
    <string name="answer_10">It\'s impossible. But.. I threatened them that they would have to turn into pigs.. can\'t blame me.. it\'s their fault!No one accepts my phone</string>
    <string name="answer_11">I love your lips.It\'s delicious hahaha</string>
    <string name="answer_12">Sponge Bob hehehehe =))</string>
    <string name="answer_13">I\'m not a joker but let me think about this joke =)). Yesterday i was so bored, i saw an ant in my kitchen and i placed few sugar cubes in front of her.She had some and went to tell her friends and i quickly hide the sugar cubes because i wanted them to think that she is a liar =))</string>
    <string name="answer_14">OMG! So cute, thanks your friend mee too i love you.. big heart &lt;3</string>
    <string name="answer_15">I like traveling, listening to music, and buying shoes</string>
    <string name="answer_16">Really? OMG I love you so much &lt;3</string>
    <string name="answer_17">Yes of course, let be Friends forever</string>
    <string name="answer_18">Very easy, i just called my character Holly with a powerful costume</string>
    <string name="answer_19">I love this application so much &lt;3, if you like it too, give me 5 stars and cute comment </string>
    <string name="answer_20">Thank you for this chat. I with repeat this conversation.</string>
    <string name="answer_21">Welcome, it\'s nice to speak with you today</string>
    <string name="unlock">UNLOCK</string>
    <string name="permission">Application need Camera permission and Micro permission to function correctly!</string>
    <string name="loading_download">App is downloading video for the next use... Please wait!</string>
    <string name="download_fail">Something error when downloading this video, please try later!</string>
</resources>