<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.call.FragmentCall">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:padding="@dimen/_12sdp"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/title" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/app_font_700"
        android:foreground="@drawable/ripple_effect_fg"
        android:text="@string/call_john_park"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:background="@drawable/bg_container_call"
        android:paddingTop="@dimen/_12sdp"
        android:paddingBottom="@dimen/_20sdp"
        app:layout_constraintBottom_toTopOf="@id/bannerAds"
        app:layout_constraintTop_toBottomOf="@id/btn_back">

        <ImageView
            android:id="@+id/imv_banner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:src="@drawable/ic_banner_call"
            app:layout_constraintDimensionRatio="296:158"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btn_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/bg_button_time"
            android:fontFamily="@font/app_font_700"
            android:foreground="?selectableItemBackgroundBorderless"
            android:paddingHorizontal="@dimen/_30sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/schedule"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="@id/imv_banner"
            app:layout_constraintStart_toStartOf="@id/imv_banner"
            app:layout_constraintTop_toBottomOf="@id/imv_banner" />

        <TextView
            android:id="@+id/btn_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/bg_button_time"
            android:fontFamily="@font/app_font_700"
            android:foreground="?selectableItemBackgroundBorderless"
            android:paddingHorizontal="@dimen/_30sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/fifteen_second"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="@id/imv_banner"
            app:layout_constraintStart_toStartOf="@id/imv_banner"
            app:layout_constraintTop_toBottomOf="@id/btn_schedule" />

        <TextView
            android:id="@+id/btn_30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/bg_button_time"
            android:fontFamily="@font/app_font_700"
            android:foreground="?selectableItemBackgroundBorderless"
            android:paddingHorizontal="@dimen/_30sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/thirty_second"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="@id/imv_banner"
            app:layout_constraintStart_toStartOf="@id/imv_banner"
            app:layout_constraintTop_toBottomOf="@id/btn_15" />

        <TextView
            android:id="@+id/btn_60"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/bg_button_time"
            android:fontFamily="@font/app_font_700"
            android:foreground="?selectableItemBackgroundBorderless"
            android:paddingHorizontal="@dimen/_30sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/sixty_second"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="@id/imv_banner"
            app:layout_constraintStart_toStartOf="@id/imv_banner"
            app:layout_constraintTop_toBottomOf="@id/btn_30" />

        <TextView
            android:id="@+id/btn_call_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/bg_button_time"
            android:fontFamily="@font/app_font_700"
            android:paddingHorizontal="@dimen/_30sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/call_now"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="@id/imv_banner"
            app:layout_constraintStart_toStartOf="@id/imv_banner"
            app:layout_constraintTop_toBottomOf="@id/btn_60" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/bannerAds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>