<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_call"
    tools:context=".view.main.call.FragmentCallClose">


    <ImageView
        android:id="@+id/imv_banner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/ic_banner_progress_call"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".5" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/app_font_700"
        android:gravity="center"
        android:text="@string/skibidy_toilet"
        android:textColor="@color/white"
        android:textSize="@dimen/_24sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imv_banner" />

    <TextView
        android:id="@+id/tv_call_ended"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:fontFamily="@font/app_font_500"
        android:text="@string/call_ended"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_accent"
        android:textSize="@dimen/_14sdp"
        android:fontFamily="@font/app_font_500"
        android:text="@string/tap_to_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingVertical="@dimen/_12sdp"
        android:paddingHorizontal="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@id/tv_call_ended" />

    <FrameLayout
        android:id="@+id/container_broken"
        android:visibility="gone"
        android:background="@drawable/ic_broken_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <FrameLayout
        android:id="@+id/bannerAds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>