<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_call"
    tools:context=".view.main.call.FragmentCallScreen">

    <ImageView
        android:id="@+id/imv_banner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/ic_banner_progress_call"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".5" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/app_font_700"
        android:gravity="center"
        android:text="@string/skibidy_toilet"
        android:textColor="@color/white"
        android:textSize="@dimen/_24sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imv_banner" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:fontFamily="@font/app_font_500"
        android:text="+1-953-158-5616"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <ImageView
        android:id="@+id/imv_video"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/ic_video_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone" />

    <TextView
        android:id="@+id/incoming_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/app_font_500"
        android:text="@string/incoming_video"
        android:textColor="@color/white"
        android:textSize="@dimen/_22sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imv_video" />

    <ImageView
        android:id="@+id/imv_decline"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_26sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:src="@drawable/ic_decline"
        app:layout_constraintBottom_toTopOf="@id/tv_decline"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_decline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_40sdp"
        android:text="@string/decline"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/imv_decline"
        app:layout_constraintStart_toStartOf="@id/imv_decline" />

<!--    <ImageView-->
    <!--        android:id="@+id/imv_accept"-->
    <!--        android:layout_width="@dimen/_50sdp"-->
    <!--        android:layout_height="@dimen/_50sdp"-->
    <!--        android:layout_marginEnd="@dimen/_26sdp"-->
    <!--        android:layout_marginBottom="@dimen/_12sdp"-->
    <!--        android:src="@drawable/ic_accept"-->
    <!--        app:layout_constraintBottom_toTopOf="@id/tv_accept"-->
    <!--        app:layout_constraintEnd_toEndOf="parent" />-->
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/imv_accept"
        android:layout_marginEnd="@dimen/_26sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@id/tv_accept"
        app:layout_constraintEnd_toEndOf="parent"
        app:lottie_rawRes="@raw/calling_anim"
        android:scaleX="2.5"
        android:scaleY="2.5"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"/>

    <TextView
        android:id="@+id/tv_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_40sdp"
        android:text="@string/accept"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/imv_accept"
        app:layout_constraintStart_toStartOf="@id/imv_accept" />
</androidx.constraintlayout.widget.ConstraintLayout>